--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
 body{
-    background-image: url(images/whales\ 2.jpeg);
-    background-repeat: repeat-y;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: antiquewhite;
 }
 h1 {
     width:500px;
