--- a/style.css
+++ b/style.css
@@ -39,7 +39,10 @@ h3{
     text-align: center;
     font-size: 35px;
 }
-.image{
-    width: 100px;
-    height: 35px;
+#Dolphin{
+    width: 100%;
+    height: 100%;
+}
+#Profile{
+    width: 100%;
 }
